# scripty

./: .gitignore  .rules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: 00_hello_world.rs  01_simple_pipes.rs  02_pipe_modes.rs  03_io_patterns.rs  03_read_ext.rs  04_run_with_io.rs  05_spawn_io.rs  error_handling.rs  fs_operations.rs
src/: fs.rs  lib.rs
src/cmd/: command.rs  mod.rs  pipeline.rs  types.rs
src/cmd/tests/: input_output.rs  io_patterns.rs  mod.rs  no_echo.rs  pipeline.rs  run_output_verification.rs
xtask/: Cargo.toml
xtask/src/: main.rs  readme.rs
